add whatsapp number

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
       <div class="topbar d-flex align-items-center dark-background">
         <div class="container d-flex justify-content-center justify-content-md-between">
           <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-phone d-flex align-items-center ms-4"><span> (21) 9 9508-8934</span></i>
+            <i class="bi bi-phone d-flex align-items-center ms-4 m-2"></i><a href="tel:+5521995088934">Clique para falar
+                  por telefone</a>
           </div>
           <div class="social-links d-none d-md-flex align-items-center">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=5521995088934" class="whatsapp"
+              aria-label="Whatsapp da Dra. Franciane"><i class="bi bi-whatsapp"></i></a>
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
           </div>
         </div>
       </div><!-- End Top Bar -->
@@ -96,7 +97,7 @@
             <div class="carousel-container">
               <h2>Franciane&nbsp;Rossone</h2>
               <h3 class="subtitulo">Cirurgia Plástica</h3>
-              <a href="#" class="btn-get-started">Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -104,7 +105,7 @@
             <img class="top-aligned" src="assets/img/hero-carousel/fr1.jpg" alt="">
             <div class="carousel-container">
               <h2>Você na sua melhor versão</h2>
-              <a href="#" class="btn-get-started">Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -112,7 +113,7 @@
             <img class="top-aligned" src="assets/img/hero-carousel/fr7.jpg" alt="">
             <div class="carousel-container">
               <h2>A forma como você se vê no espelho importa</h2>
-              <a href="#" class="btn-get-started">Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -208,7 +209,7 @@
                 <h3>A Clínica</h3>
                 <p>Sinta-se sempre bem-vindo à nossa clínica e desfrute dos
                   nossos cuidados focados no seu bem-estar e beleza.</p>
-                <a class="cta-btn" href="#appointment">Agendar Consulta</a>
+                <a class="cta-btn" href="https://api.whatsapp.com/send?phone=5521995088934">Agendar Consulta</a>
               </div>
             </div>
           </div>
@@ -847,7 +848,8 @@
                     data-aos-delay="300">
                     <i class="bi bi-telephone"></i>
                     <h3>Telefone</h3>
-                    <p>(21) 9 9508-8934</p>
+                    <p><a href="tel:+5521995088934">Clique para falar
+                  por telefone</a></p>
                   </div>
                 </div><!-- End Info Item -->
 
@@ -876,11 +878,10 @@
         <h3 class="sitename">Franciane Rossone</h3>
         <p class="subtitulo">Cirurgia Plástica</p>
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-skype"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=5521995088934" class="whatsapp"
+            aria-label="Whatsapp da Dra. Franciane"><i class="bi bi-whatsapp"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         </div>
         <div class="container">
           <div class="copyright">
@@ -888,7 +889,8 @@
           </div>
           <div class="credits">
             Desenvolvido por
-            <a href="https://www.cassiaqueirozcodelab.com.br/" style="color: white; border-bottom: 1px solid rgba(255, 255, 255, 0.5);"
+            <a href="https://www.cassiaqueirozcodelab.com.br/"
+              style="color: white; border-bottom: 1px solid rgba(255, 255, 255, 0.5);"
               onmouseover="this.style.borderBottom='none';"
               onmouseout="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.5)';"
               onfocus="this.style.borderBottom='none';"
