change cirurgias photo size

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="tab-content">
                 <div class="tab-pane active show" id="cirurgias-tab-1" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Lipoaspiração/ Lipoescultura</h3>
                       <p class="fst-italic">Lipoaspiração tem o objetivo de melhorar o contorno corporal.
                         É indicada para pacientes que já estão no peso ideal e desejam
@@ -307,14 +307,14 @@
                         do quadril, restaurar volume nos grandes lábios da região
                         íntima, por exemplo.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
                 </div>
                 <div class="tab-pane" id="cirurgias-tab-2" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Lifting facial</h3>
                       <p class="fst-italic">Indicado para pacientes que apresentam sinais avançados de
                         envelhecimento.</p>
@@ -340,14 +340,14 @@
                       <p>As cicatrizes ficam posicionadas no couro cabeludo, linha do
                         cabelo e ao redor das orelhas.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
                 </div>
                 <div class="tab-pane" id="cirurgias-tab-3" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Abdominoplastia</h3>
                       <p class="fst-italic">Em alguns casos, as mulheres que já tiveram filhos
                         apresentam fraqueza na musculatura do abdome e flacidez de
@@ -370,14 +370,14 @@
                         excessivo de líquidos nos primeiros dias de pós-operatório. É
                         um aliado na sua recuperação.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
                 </div>
                 <div class="tab-pane" id="cirurgias-tab-4" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Mini abdominoplastia</h3>
                       <p class="fst-italic">Essa cirurgia é indicada para pacientes com flacidez de pele
                         somente abaixo do umbigo e umbigo com posição mais alta no
@@ -389,14 +389,14 @@
                         da abdominoplastia tradicional.
                         Não há cicatriz ao redor do umbigo.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
                 </div>
                 <div class="tab-pane" id="cirurgias-tab-5" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Mamoplastia redutora</h3>
                       <p class="fst-italic">As mamas muito volumosas representam um verdadeiro
                         incômodo. As mulheres têm dificuldade na hora de comprar
@@ -411,7 +411,7 @@
                         mamas enquanto outras desejam mamas bem pequenas. Essa
                         expectativa pode ser alinhada com a sua cirurgiã plástica.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -419,15 +419,15 @@
 
                 <div class="tab-pane" id="cirurgias-tab-6" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Mastopexia</h3>
                       <p class="fst-italic">Cirurgia indicada para corrigir a flacidez e queda das mamas.</p>
                       <p>Nessa cirurgia existem várias possibilidades de cicatriz:</p>
                       <ul>
-                        <li>ao redor da aréola;</li>
-                        <li>ao redor da aréola e uma vertical (cicatriz pirulito);</li>
-                        <li>em T invertido;</li>
-                        <li>em L.</li>
+                        <li>Ao redor da aréola;</li>
+                        <li>Ao redor da aréola e uma vertical (cicatriz pirulito);</li>
+                        <li>Em T invertido;</li>
+                        <li>Em L.</li>
                       </ul>
                       <p>A escolha depende do grau de flacidez de pele existente e da expertise do cirurgião.
                         Nessa cirurgia, a mama é levantada e as aréolas são reposicionadas se houver necessidade.
@@ -436,7 +436,7 @@
                       <p>Não. Essa cirurgia pode ser feita com ou sem implantes de silicone, a depender do desejo da
                         paciente.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -445,7 +445,7 @@
 
                 <div class="tab-pane" id="cirurgias-tab-7" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Mamoplastia de aumento</h3>
                       <p class="fst-italic">A mamoplastia de aumento é indicada para pacientes que possuem mamas
                         pequenas,
@@ -467,7 +467,7 @@
                         (neste
                         caso, dual-plane).</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -477,7 +477,7 @@
                 <!-- Ginecomastia -->
                 <div class="tab-pane" id="cirurgias-tab-8" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Ginecomastia</h3>
                       <p class="fst-italic">A ginecomastia ocorre quando há um aumento do tecido mamário nos
                         homens.
@@ -498,7 +498,7 @@
                         quando
                         ocorre perda de peso.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -507,7 +507,7 @@
                 <!-- Otoplastia -->
                 <div class="tab-pane" id="cirurgias-tab-9" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Otoplastia</h3>
                       <p class="fst-italic">A cirurgia de otoplastia corrige as deformidades das orelhas, sendo a
                         correção das orelhas proeminentes (mais conhecidas como orelhas de abano) a mais comum.
@@ -518,7 +518,7 @@
                         discreto,
                         atrás da orelha.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -527,7 +527,7 @@
                 <!-- Blefaroplastia -->
                 <div class="tab-pane" id="cirurgias-tab-10" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Blefaroplastia</h3>
                       <p class="fst-italic">Com o envelhecimento é comum o surgimento de flacidez de pele nas
                         pálpebras
@@ -538,7 +538,7 @@
                         campo
                         visual.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -547,7 +547,7 @@
                 <!-- Lifting de Coxas -->
                 <div class="tab-pane" id="cirurgias-tab-11" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Lifting de Coxas</h3>
                       <p class="fst-italic">Pacientes que passaram por perda ponderal importante após mudança no
                         estilo
@@ -557,7 +557,7 @@
                       <p>O lifting de coxas remodela a região, reduzindo o excesso de pele e, em alguns casos, a
                         gordura.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
@@ -566,7 +566,7 @@
                 <!-- Lifting de Braços -->
                 <div class="tab-pane" id="cirurgias-tab-12" role="tabpanel">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-7 details order-2 order-lg-1">
                       <h3>Lifting de Braços</h3>
                       <p class="fst-italic">Lifting de braços ou braquioplastia é a cirurgia indicada para
                         corrigir a
@@ -581,7 +581,7 @@
                         não
                         apresentariam resultado satisfatório.</p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-5 text-center order-1 order-lg-2">
                       <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
