--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="carousel-item active">
             <img class="center-aligned" src="assets/img/hero-carousel/fr4.jpg" alt="">
             <div class="carousel-container">
-              <h2>Franciane&nbsp;Rossone</h2>
+              <h2 class="doctor-name">Franciane&nbsp;Rossone</h2>
               <h3 class="subtitulo">Cirurgia Plástica</h3>
               <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Consulta</a>
             </div>
@@ -875,7 +875,7 @@
 
     <footer id="footer" class="footer position-relative accent-background">
       <div class="container">
-        <h3 class="sitename">Franciane Rossone</h3>
+        <h3 class="sitename doctor-name">Franciane Rossone</h3>
         <p class="subtitulo">Cirurgia Plástica</p>
         <div class="social-links d-flex justify-content-center">
           <a href="https://api.whatsapp.com/send?phone=5521995088934" class="whatsapp"
