--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="col-xl-10">
               <div class="text-center">
                 <h3>A Clínica</h3>
-                <p>Sinta-se sempre bem-vindo à nossa clínica e desfrute dos
+                <p>Sinta-se sempre bem-vindo(a) à nossa clínica e desfrute dos
                   nossos cuidados focados no seu bem-estar e beleza.</p>
                 <a class="cta-btn" href="https://api.whatsapp.com/send?phone=5521995088934">Agendar Consulta</a>
               </div>
