--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Marcellus:wght@400&display=swap"
-      rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/bw-vivant" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/oregon-ldo" rel="stylesheet">
+
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
