change colors in general

--- a/index.html
+++ b/index.html
@@ -884,11 +884,11 @@
           <div class="credits">
             Desenvolvido por
             <a href="https://www.cassiaqueirozcodelab.com.br/"
-              style="color: #fff; border-bottom: 1px solid rgba(255, 255, 255, 0.5);"
-              onmouseover="this.style.borderBottom='none';"
-              onmouseout="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.5)';"
-              onfocus="this.style.borderBottom='none';"
-              onblur="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.5)';">
+              style="color: rgba(4, 4, 4, 0.75); border-bottom: 1px solid rgba(4, 4, 4, 0.2);"
+              onmouseover="this.style.borderBottom='1px solid transparent';"
+              onmouseout="this.style.borderBottom='1px solid rgba(4, 4, 4, 0.2)';"
+              onfocus="this.style.borderBottom='1px solid transparent';"
+              onblur="this.style.borderBottom='1px solid rgba(4, 4, 4, 0.2)';">
               cassiaqueirozcodelab</a>.
           </div>
 
