add whatsapp btn

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
-
+          <a href="https://api.whatsapp.com/send?phone=5521995088934" class="appointment-btn scrollto">
+            <span class="d-none d-lg-inline-flex">Agendar</span> Consulta
+            <i class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
         </div>
 
       </div>
@@ -82,7 +84,7 @@
             <div class="carousel-container">
               <h1 class="doctor-name">Franciane&nbsp;Rossone</h1>
               <h3 class="subtitulo">Cirurgia&nbsp;Plástica</h3>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -90,7 +92,7 @@
             <img class="top-aligned" src="assets/img/hero-carousel/fr1.jpg" alt="">
             <div class="carousel-container">
               <h2>Você na sua melhor versão</h2>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
 
