add all whatsapp btns

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             <div class="carousel-container">
               <h1 class="doctor-name">Franciane&nbsp;Rossone</h1>
               <h3 class="subtitulo">Cirurgia&nbsp;Plástica</h3>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar
+                Consulta <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
+                  style="margin-left: 5px; font-size: medium;"></i></a>
+              </a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -92,7 +95,10 @@
             <img class="top-aligned" src="assets/img/hero-carousel/fr1.jpg" alt="">
             <div class="carousel-container">
               <h2>Você na sua melhor versão</h2>
-              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar Consulta</a>
+              <a href="https://api.whatsapp.com/send?phone=5521995088934" class="btn-get-started scrollto">Agendar
+                Consulta <i class="bi bi-whatsapp d-lg-inline d-xl-inline"
+                  style="margin-left: 5px; font-size: medium;"></i></a>
+              </a>
             </div>
           </div><!-- End Carousel Item -->
 
@@ -191,7 +197,8 @@
                 <h3>A Clínica</h3>
                 <p>Sinta-se sempre bem-vindo(a) à nossa clínica e desfrute dos
                   nossos cuidados focados no seu bem-estar e beleza.</p>
-                <a class="cta-btn" href="https://api.whatsapp.com/send?phone=5521995088934">Agendar Consulta</a>
+                <a class="cta-btn" href="https://api.whatsapp.com/send?phone=5521995088934">Agendar Consulta <i
+                    class="bi bi-whatsapp d-lg-inline d-xl-inline" style="margin-left: 5px; font-size: medium;"></i></a>
               </div>
             </div>
           </div>
